Move to separate files
Moved style to main.css
Moved Javascript to main.js

--- a/index.html
+++ b/index.html
@@ -7,418 +7,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Rock+Salt&family=Short+Stack:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --bg: #1a1a1a;
-            --board: #2f2f2f;
-            --frame: #654321;
-            --accent: #facc15;
-            --accent-2: #fcd34d;
-            --accent-3: #b45309;
-            --ink: #fff;
-            --muted: #ddd;
-            --card-1: #264d34;
-            --card-2: #1f3b29;
-            --card-border: #3e5e4a;
-            --chip-bg: #111827;
-        }
-
-        html, body { height: 100%; }
-        body {
-            margin: 0;
-            display: grid;
-            grid-template-rows: 1fr;
-            background: var(--bg);
-            color: var(--ink);
-            font-family: 'Roboto Mono', monospace;
-            overflow: hidden; /* wall-display style */
-        }
-
-        .chalkboard {
-            display: grid;
-            grid-template-rows: 1fr;
-            background: var(--board);
-            border: 8px solid var(--frame);
-            border-left: none;
-            border-right: none;
-            border-radius: 1rem;
-            padding: 0 3vw 1.5rem;
-            width: 100vw;
-            box-sizing: border-box;
-        }
-
-        .tap-board-wrapper {
-            position: relative;
-            overflow: visible;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-        }
-
-        .tap-board-scaler {
-            /* remove max-height to avoid clipping */
-            transform-origin: top center;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-            height: auto; /* JS will set an explicit height matching the scaled content */
-            overflow: visible;
-        }
-
-        .tap-board {
-            display: flex;
-            gap: 2rem;
-            width: 100%;
-        }
-
-        .tap-column {
-            flex: 1 1 0;
-            display: flex;
-            flex-direction: column;
-            gap: 0.75rem; /* spacing between tap items */
-            padding-bottom: 1rem;
-        }
-
-        .tap-column-header {
-            text-align: center;
-            font-size: clamp(1.75rem, 2vw + 1rem, 3rem);
-            font-weight: 700;
-            color: var(--accent-2);
-            margin: 0.25rem 0; /* tight gap above/below */
-            text-decoration: underline;
-            letter-spacing: 0.06em;
-        }
-
-        .tap-item {
-            position: relative;
-            background: linear-gradient(135deg, var(--card-1) 0%, var(--card-2) 100%), url('https://www.transparenttextures.com/patterns/asfalt-light.png');
-            background-size: cover;
-            border: 1px solid var(--card-border);
-            border-radius: 0.5rem;
-            box-shadow: inset 0 0 10px #00000099;
-            padding: 1.5rem 1rem 1rem;
-            min-height: 120px;
-            margin-bottom: 0.5rem; /* extra gap between items */
-        }
-
-        .tap-col {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            gap: 1rem;
-            align-items: start;
-        }
-
-        .tap-logo {
-            width: 80px;
-            height: 80px;
-            background: #555;
-            border: 2px solid var(--accent);
-            border-radius: 0.5rem;
-            display: grid;
-            place-items: center;
-            overflow: hidden;
-            flex-shrink: 0;
-            font-size: 2.5rem;
-        }
-        .tap-logo img { max-width: 100%; max-height: 100%; display: block; }
-
-        .tap-details { min-width: 0; }
-
-        .tap-name {
-            font-family: 'Short Stack', cursive;
-            font-size: clamp(1.25rem, 1vw + 1rem, 2rem);
-            font-weight: 700;
-            line-height: 1.2;
-        }
-
-        .meta-row {
-            display: flex;
-            justify-content: space-between;
-            gap: 0.5rem;
-            font-size: 1rem;
-            flex-wrap: wrap;
-        }
-
-        .tap-style { opacity: 0.95; }
-        .tap-abv { opacity: 0.95; }
-
-        .tap-description {
-            margin-top: 0.3rem;
-            margin-bottom: 1.2rem;
-            font-size: 0.95rem;
-            color: var(--muted);
-        }
-
-        .tap-price {
-            position: absolute;
-            inset-inline: 0;
-            bottom: 0.5rem;
-            margin-top: 1rem;
-            font-size: 0.95rem;
-            text-align: center;
-        }
-
-        .price-text { font-size: 1.2rem; font-weight: 700; }
-
-        .tap-countries {
-            position: absolute;
-            top: 0.5rem;
-            right: 0.5rem;
-            display: inline-flex; /* horizontal flags */
-            gap: 0.25rem;
-            z-index: 10;
-        }
-
-        .flag-badge {
-            font-size: 32px;
-            background: var(--accent-2);
-            color: #92400e;
-            padding: 0.15rem 0.4rem;
-            border-radius: 0.5rem;
-            box-shadow: 0 0 4px color-mix(in srgb, var(--accent-3), transparent 33%);
-            line-height: 1;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            user-select: none;
-        }
-
-        .tap-number {
-            position: absolute;
-            top: 0.5rem;
-            left: 0.5rem;
-            background: var(--chip-bg);
-            color: var(--accent);
-            font-weight: 700;
-            font-size: 1.05rem;
-            height: 2.25rem;
-            min-width: 2.25rem;
-            padding: 0 0.6rem;
-            border-radius: 9999px;
-            display: grid;
-            place-items: center;
-            box-shadow: 0 0 6px #000000aa;
-            white-space: nowrap;
-        }
-
-        @media (max-width: 900px) {
-            .tap-board { flex-direction: column; }
-        }
-    </style>
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-<main class="chalkboard">
-    <section class="tap-board-wrapper">
-        <div class="tap-board-scaler" id="boardScaler">
-            <div class="tap-board" role="list" aria-label="Tap list">
-                <div class="tap-column" aria-labelledby="tap-cider-header">
-                    <h2 class="tap-column-header" id="tap-cider-header">CIDER</h2>
-                    <div id="cider-column"><div style="text-align:center">Loading Ciders…</div></div>
-                </div>
-                <div class="tap-column" aria-labelledby="tap-beer-header">
-                    <h2 class="tap-column-header" id="tap-beer-header">BEER</h2>
-                    <div id="beer-column"><div style="text-align:center">Loading Beers…</div></div>
+    <main class="chalkboard">
+        <section class="tap-board-wrapper">
+            <div class="tap-board-scaler" id="boardScaler">
+                <div class="tap-board" role="list" aria-label="Tap list">
+                    <div class="tap-column" aria-labelledby="tap-cider-header">
+                        <h2 class="tap-column-header" id="tap-cider-header">CIDER</h2>
+                        <div id="cider-column"><div style="text-align:center">Loading Ciders…</div></div>
+                    </div>
+                    <div class="tap-column" aria-labelledby="tap-beer-header">
+                        <h2 class="tap-column-header" id="tap-beer-header">BEER</h2>
+                        <div id="beer-column"><div style="text-align:center">Loading Beers…</div></div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-</main>
+        </section>
+    </main>
 
-<script src="https://cdn.jsdelivr.net/npm/papaparse@5.5.3/papaparse.min.js" defer></script>
-<script>
-    const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSWA0cohQEmwx6KHWzzdDpsSCw6LNg8LLwEE1eftKKSqycOOCWidYITkFOVDpmJ1meNcvSwE4-pzWr_/pub?gid=0&single=true&output=csv';
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.5.3/papaparse.min.js" defer></script>
+    <script src="/main.js"></script>
 
-    const memo = (fn) => { const cache = new Map(); return (k) => cache.has(k) ? cache.get(k) : (cache.set(k, fn(k)), cache.get(k)); };
-
-    const flagEmoji = memo((code) => {
-        if (!code) return '';
-        const map = {
-            ENGLAND: '\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F',
-            SCOTLAND: '\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC73\uDB40\uDC63\uDB40\uDC74\uDB40\uDC7F',
-            WALES: '\uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC77\uDB40\uDC6C\uDB40\uDC73\uDB40\uDC7F'
-        };
-        const upper = code.trim().toUpperCase();
-        if (map[upper]) return map[upper];
-        const OFFSET = 127397;
-        return [...upper].map(c => String.fromCodePoint(c.charCodeAt(0) + OFFSET)).join('');
-    });
-
-    const make = (tag, props = {}, children = []) => {
-        const el = document.createElement(tag);
-        for (const [k, v] of Object.entries(props)) {
-            if (k === 'class') el.className = v;
-            else if (k === 'dataset') Object.assign(el.dataset, v);
-            else if (k === 'style' && typeof v === 'object') Object.assign(el.style, v);
-            else if (k.startsWith('on') && typeof v === 'function') el.addEventListener(k.slice(2), v);
-            else if (k === 'text') el.textContent = v;
-            else el.setAttribute(k, v);
-        }
-        const appendChild = (c) => {
-            if (c == null) return;
-            if (c instanceof Node || c instanceof DocumentFragment) { el.append(c); return; }
-            if (typeof c[Symbol.iterator] === 'function' && !(typeof c === 'string')) {
-                for (const sub of c) appendChild(sub);
-                return;
-            }
-            el.append(document.createTextNode(String(c)));
-        };
-        appendChild(children);
-        return el;
-    };
-
-    const byId = (id) => document.getElementById(id);
-
-    function renderFlagBadges(countriesStr) {
-        if (!countriesStr) return make('span');
-        const codes = String(countriesStr).split(',').map(c => c.trim().toUpperCase()).filter(Boolean);
-        return make('span', { class: 'flags' }, codes.map(code =>
-            make('span', { class: 'flag-badge', ariaLabel: `${code} flag` }, flagEmoji(code))
-        ));
-    }
-
-    function getLogoElement(item) {
-        const logo = item.Logo && String(item.Logo).trim();
-        if (logo) return make('div', { class: 'tap-logo' }, make('img', { src: logo, alt: `${item.Name} logo`, loading: 'lazy' }));
-        const type = item.Type || '';
-        if (/perry/i.test(type)) return make('div', { class: 'tap-logo', ariaLabel: 'Perry' }, '🍐');
-        if (/cider/i.test(type)) return make('div', { class: 'tap-logo', ariaLabel: 'Cider' }, '🍎');
-        return make('div', { class: 'tap-logo', ariaLabel: 'Beer' }, '🍺');
-    }
-
-    function highlightYen(price) {
-        const frag = document.createDocumentFragment();
-        const regex = /(¥\d+[\d,]*)/g;
-        let lastIndex = 0; let m;
-        const s = String(price ?? '');
-        while ((m = regex.exec(s)) !== null) {
-            if (m.index > lastIndex) frag.append(s.slice(lastIndex, m.index));
-            frag.append(make('span', { class: 'price-text' }, m[1]));
-            lastIndex = regex.lastIndex;
-        }
-        if (lastIndex < s.length) frag.append(s.slice(lastIndex));
-        return frag;
-    }
-
-    function renderTapItem(item, defaultPriceNote) {
-        const price = (item['Price Info'] && String(item['Price Info']).trim()) || defaultPriceNote || '';
-        const countries = renderFlagBadges(item['Country'] || item['Countries'] || '');
-        const number = item['Tap Number'] && make('div', { class: 'tap-number' }, String(item['Tap Number']));
-
-        const card = make('article', { class: 'tap-item', role: 'listitem' }, [
-            make('div', { class: 'tap-col' }, [
-                number,
-                make('div', { class: 'tap-countries' }, countries),
-                getLogoElement(item),
-                make('div', { class: 'tap-details' }, [
-                    make('div', { class: 'tap-name' }, String(item.Name || '')),
-                    make('div', { class: 'meta-row' }, [
-                        make('span', { class: 'tap-style' }, String(item.Style || '')),
-                        make('span', { class: 'tap-abv' }, item.ABV ? `ABV: ${item.ABV}%` : ''),
-                    ]),
-                    make('p', { class: 'tap-description' }, String(item.Description || '')),
-                ]),
-            ]),
-            make('div', { class: 'tap-price' }),
-        ]);
-
-        const priceHost = card.querySelector('.tap-price');
-        priceHost.append(highlightYen(price));
-        return card;
-    }
-
-    function coerceBool(v) { return /^(true|1|yes)$/i.test(String(v || '')); }
-
-    function pickStandardPrice(rows) {
-        let val = '';
-        for (const row of rows) {
-            const s = row['Standard Price Note'] && String(row['Standard Price Note']).trim();
-            if (s) val = s;
-        }
-        return val;
-    }
-
-    function scaleTapBoard() {
-        const scaler = byId('boardScaler');
-        const chalkboard = document.querySelector('.chalkboard');
-        const ciderHeader = byId('tap-cider-header');
-        const beerHeader = byId('tap-beer-header');
-        const cider = byId('cider-column');
-        const beer = byId('beer-column');
-        if (!scaler || !chalkboard || !cider || !beer) return;
-        const headerH = Math.max(ciderHeader?.offsetHeight || 0, beerHeader?.offsetHeight || 0);
-        const availableHeight = chalkboard.clientHeight - headerH - 50;
-        const maxHeight = Math.max(cider.scrollHeight, beer.scrollHeight);
-        const scale = maxHeight > 0 ? Math.min(1, availableHeight / maxHeight) : 1;
-        scaler.style.transform = `scale(${scale})`;
-        scaler.style.height = `${Math.ceil(maxHeight * scale)}px`;
-        scaler.style.overflow = 'visible';
-    }
-
-    let resizeRAF = null;
-    function scheduleScale() {
-        if (resizeRAF) cancelAnimationFrame(resizeRAF);
-        resizeRAF = requestAnimationFrame(scaleTapBoard);
-    }
-
-    function renderRows(rows) {
-        const ciderColumn = byId('cider-column');
-        const beerColumn = byId('beer-column');
-        const ciderHeader = byId('tap-cider-header');
-        if (!ciderColumn || !beerColumn) return;
-
-        ciderColumn.innerHTML = '';
-        beerColumn.innerHTML = '';
-
-        const defaultPrice = pickStandardPrice(rows);
-
-        const ciderFrag = document.createDocumentFragment();
-        const beerFrag = document.createDocumentFragment();
-        let hasPerry = false;
-
-        for (const item of rows) {
-            if (!item.Name) continue;
-            if (!coerceBool(item.Available)) continue;
-            if (/perry/i.test(item.Type || '')) hasPerry = true;
-
-            const card = renderTapItem(item, defaultPrice);
-            (/(cider)|(perry)/i.test(item.Type || '') ? ciderFrag : beerFrag).append(card);
-        }
-
-        ciderHeader.textContent = hasPerry ? 'CIDER & PERRY' : 'CIDER'
-
-        ciderColumn.append(ciderFrag);
-        beerColumn.append(beerFrag);
-        window._lastUpdated = new Date();
-        scheduleScale();
-    }
-
-    function loadTapData() {
-        Papa.parse(SHEET_CSV_URL, {
-            download: true,
-            header: true,
-            skipEmptyLines: true,
-            complete: ({ data }) => {
-                try { renderRows(data); } catch (err) { console.error(err); }
-            },
-            error: (err) => { console.error('PapaParse error', err); },
-        });
-    }
-
-    function watchdog() {
-        if (window._lastUpdated && (Date.now() - window._lastUpdated.getTime()) > 2 * 60 * 1000) {
-            window.location.reload();
-        }
-    }
-
-    const ro = new ResizeObserver(scheduleScale);
-    window.addEventListener('load', () => {
-        ro.observe(byId('cider-column'));
-        ro.observe(byId('beer-column'));
-        window.addEventListener('resize', scheduleScale);
-        loadTapData();
-        setInterval(loadTapData, 60 * 1000);
-        setInterval(watchdog, 90 * 1000);
-    });
-</script>
 </body>
 </html>
